--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.26.1",
     "react-redux": "^7.2.6",
